Create switch-literal-order codemod (#121)
This codemod uses PMD to switch the order of expressions to make sure
literals are first.